# SideBar

./: #Cargo.lock#  .gitignore  Cargo.toml  Cargo.toml~  LICENSE  README.md  flake.nix  shell.nix
src/: main.rs
src/assets/: healt.sqbpro
src/assets/default/: settings.ini  themes.ini
src/assets/notifications/: notifications.txt
src/ui/: #task_manager.rs#  async_food_widget.rs  color_parser.rs  custom_vidgets.rs  food_widget.rs  health_widget.rs  health_widget.rs~  mod.rs  notifications_listener.rs  reminders_manager.rs  reminders_manager.rs~  settings.rs  sidebar.rs  sidebar.rs~  task_manager.rs  weather_widget.rs
src/ui/widgets/: mod.rs  todo_widget.rs  weather_plugin.rs
