[package]
name = "SideBar"
version = "1.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
calory_fetch = { path = "../CaloryFetch" }
eframe = "0.27.2"
egui = "0.27.2"
reqwest = {version = "0.11", features = ["blocking", "json"]} 
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
serde_json = { version = "1.0.128" }
bincode = "1.3.3"
ini = "1.3.0"
configparser = "3.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
openssl = { version = "0.10", features = ["vendored"] }
image = "0.25.9"
once_cell = "1.19"
zbus = "4.0"
futures-util = "0.3"
dirs = "5.0"
rusqlite = "0.30"
regex = "1.10"
